fixed overflow, started middle card section

--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ body {
     background-color: #ffffff;
     display: flex;
     justify-content: center;
+    overflow-x: hidden;
 }
 
 .container {
@@ -113,4 +114,33 @@ body {
 .phone-container img {
     height: 441px;
     width: 767px;
+}
+
+/* .card-container {
+    display: flex;
+    justify-content: center;
+} */
+
+.cards-container {
+    
+}
+
+.card-section::before {
+    content: '';
+    border-bottom-left-radius: 50% 100%;
+    border-bottom-right-radius: 50% 100%;
+    position: absolute;
+    top: 50%;
+    bottom: -10;
+    left: -50%;
+    height: 100%;
+    width: 200%;
+    background-color: #fcf8ff;
+    z-index: -2;
+    resize: none;
+}
+
+.number-container {
+    border: 1px solid #24053E;
+    border-radius: 180px;
 }
